# Groundskeeper

./: .gitignore  CLAUDE.md  MVP_PLAN.md  README.md  SPEC.md  pyproject.toml
groundskeeper/: __init__.py  groundskeeper.py
groundskeeper/config/: thresholds.yaml  trusted_apps.yaml
groundskeeper/core/: config.py  flags.py  models.py  scanner.py
groundskeeper/output/: json.py  table.py
tests/: conftest.py  test_config.py  test_models.py
